# ChangeLog for media-libs/libgphoto2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.169 2010/04/05 14:57:39 armin76 Exp $

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org> libgphoto2-2.4.8.ebuild:
  alpha/ia64/sparc stable wrt #308549

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  libgphoto2-2.4.8.ebuild:
  stable x86, bug 308549

  15 Mar 2010; nixnut <nixnut@gentoo.org> libgphoto2-2.4.8.ebuild:
  ppc stable #308549

*libgphoto2-2.4.8-r1 (14 Mar 2010)

  14 Mar 2010; Pacho Ramos <pacho@gentoo.org> +libgphoto2-2.4.8-r1.ebuild,
  +files/libgphoto2-2.4.8-increase_max_entries.patch:
  Fix bug 291049 with debian patch until upstream releases 2.6 series or
  backports the fix

  12 Mar 2010; Brent Baude <ranger@gentoo.org> libgphoto2-2.4.8.ebuild:
  Marking libgphoto2-2.4.8 ppc64 stable for bug 308549

  11 Mar 2010; Pacho Ramos <pacho@gentoo.org> libgphoto2-2.4.8.ebuild:
  amd64 stable, bug 308549

*libgphoto2-2.4.8 (24 Jan 2010)

  24 Jan 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gphoto2-ixany.patch, -files/libgphoto2-2.4.0-rpm.patch,
  -libgphoto2-2.4.3.ebuild, -files/libgphoto2-2.4.3-automagic.patch,
  -files/libgphoto2-2.4.3-gcc43.patch, -libgphoto2-2.4.7.ebuild,
  -libgphoto2-2.4.7-r1.ebuild, +libgphoto2-2.4.8.ebuild:
  Version bump. Updated translations, usb/mtp ids, bug fixes. Clean up old
  revisions.

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> libgphoto2-2.4.6.ebuild:
  Stable for HPPA (bug #282849).

  07 Jan 2010; Gilles Dartiguelongue <eva@gentoo.org>
  libgphoto2-2.4.7-r2.ebuild:
  Remove unneeded intltoolize calls, closes bug #299989.

*libgphoto2-2.4.7-r2 (07 Jan 2010)

  07 Jan 2010; Gilles Dartiguelongue <eva@gentoo.org>
  libgphoto2-2.4.3.ebuild, -libgphoto2-2.4.4.ebuild,
  -libgphoto2-2.4.5.ebuild, +libgphoto2-2.4.7-r2.ebuild,
  +files/libgphoto2-2.4.7-extra-dist.patch,
  +files/libgphoto2-2.4.7-no-test-build.patch,