@@ -5,9 +5,11 @@ AUX libgphoto2-2.4.8-increase_max_entries.patch 477 RMD160 4be0b81331eedd0233b57
 DIST libgphoto2-2.4.6.tar.bz2 5268340 RMD160 cca194a6db6658887b1b997838c7d6a5af9e2609 SHA1 f9fd10495ababce3cf992b36f3a29359e598aea7 SHA256 cbfad37afb6a65f93ce16fbe1e8a1201ef3586c614deca5cc51afc8011245606
 DIST libgphoto2-2.4.7.tar.bz2 5279581 RMD160 f5773f3b194f4dcc4a82ddbbf7ecad12e11dae93 SHA1 f91aef06204f3b1b0f3e07facba452881bedc2e1 SHA256 9e7613f21ac3dd7cf1decbab5c47c1e9a16d39c32062d7f8632adb4fc8d0271f
 DIST libgphoto2-2.4.8.tar.bz2 5371128 RMD160 0edc03231e1c646e45621b9adb09e268582b4437 SHA1 6ad0d9ffcafe2e9eba0cae958a4455ebb4cf2037 SHA256 69d7e0723b40e8a0c4fa897b96f6aecb5ae5548c3cce98c48e37b70623d9ffc3
+DIST libgphoto2-2.4.9.tar.bz2 5643227 RMD160 1af4e817281d6bfac1650a0b427a2903c997a9bb SHA1 7d876fd650430e4f52fe10e53f378688e6026387 SHA256 d4bd7da50f073c121ebca2832a7eeb23d2f7a493e902d80a0ab7f7f0f4eb110a
 EBUILD libgphoto2-2.4.6.ebuild 5917 RMD160 e79c7d7e347afea03d6d5090a35c5f29b025d449 SHA1 94dd162c9fc5fec691a8ec1636af5436721bd73e SHA256 ecb7bb2f40e5c2138e77c2921cc49aa9b5d2ae533c71a9564553e81cc4fb0b6d
 EBUILD libgphoto2-2.4.7-r2.ebuild 6637 RMD160 9e60f1a74abdb188e9c2acc3e7d3dc7fef2404db SHA1 1eb6a0d6ca965f62b543cc11fefd6be25db24974 SHA256 1b68e9918f025ebabebe2a8b9645e219e56cca69394c395cb17f382c48c18408
 EBUILD libgphoto2-2.4.8-r1.ebuild 6679 RMD160 77fefc99bc6c070b3ad97e5f687ebf0835e0a15f SHA1 4680913cc4724faf9d5eb6a39ac377eba8148800 SHA256 dfe855df55dead563c472dc98e7e909ff539741a4cd004c5af97f02e414c550e
 EBUILD libgphoto2-2.4.8.ebuild 6555 RMD160 e483b1b5b24e8a73721f6b13bcf39e77820ae11b SHA1 662fc426d0f4b2972dd758a316d3c40abd5bcd1c SHA256 6d6ca282fe1813d336111e2447d92fc944642ae97a3d7badc402b9fb3ff9e896
-MISC ChangeLog 28338 RMD160 e7e7121c56c47d921af1b309354fa3487a0daad2 SHA1 3e1ed10feaa8dab6a77cf362d72922ce107edd2a SHA256 8573a9ab2050d78e861c70988c091d6a9817b209592a08810f1c41c57897777b
+EBUILD libgphoto2-2.4.9.ebuild 6676 RMD160 4de3d8ca69eea86edf2cc3f60fa079c79005aaef SHA1 736bd40d8ad389f45d74d79ede685d5935d80b96 SHA256 acb77f332179364d2a48588354a075a731b6579c47d99fccd7da31c33eaf4f71
+MISC ChangeLog 28571 RMD160 18b16c5b9d323e69b8126695ed3a8d06bfe551fa SHA1 ade1184f0631a717948d29474379d0dfc4c80a33 SHA256 f1f9184b54a821a69f495a6da559bae0118b008f9410416c1faae0ca0efbfe90
 MISC metadata.xml 255 RMD160 182d44452574b19b29c12dc7e757a2a4aa9cbc20 SHA1 7e912f6a5b9a294509849512ba044bd88b59065f SHA256 d2cc84bd8e8d171980c022b0af42cf2f2d829e37c05183988a211fccafcf363b
